2009-09-09 Holger Vogt
 * windisp.c: white backgrond in plot with set color0=white, thicker
   lines with set xbrushwidth=2 (0: standard) in spinit
   
2009-08-29 Holger Vogt
 * measure.c, com-measure2.c, com-measure2.h: add DC and AC measurement
 * /examples/measure: example file for .measure dc, ac, and tran added.

2009-08-25 Dietmar Warning
 * src/spicelib/parser/inpptree.c: wrong derivative for u2 function - 
   bug reported and corrected by Robert Larice

2009-08-23 Holger Vogt
 * upload of /frontend/compatmode.c, compatmode.h  /misc/hash.c, hash.h
   failed.
 * xpressn.c: contents of compatmode.c and compatmode.h added as a 
   preliminary solution.
 * misc/makefile.am: hash.c, mempool.c removed again
 * forntend/makefile.am: compatmode.c removed again
 
2009-08-23 Holger Vogt
 * /frontend/compatmode.c, compatmode.h  /misc/hash.c, hash.h,
   --> new .measurement code
   
2009-08-23 Holger Vogt
 * /frontend/makefile.am, com_measure2.c, com_measure2.h, dotcards.c, dotcards.h, measure.c
   /numparam/numparam.h, xpressn.c, /include/bool.h, macros.h, misc/makefile.am, tclspice.c,
   visualc/vngspice.sln, vngspice.vcproj, compat
   --> new .measurement code
   tested for .tran simulation

2009-08-22 Dietmar Warning
 * devices/bsim4/b4ld.c, b4noi.c, b4set.c, b4temp.c: Update to version 4.6.4
 * subckt.c, 141: "/*" within comment

2009-08-12 Holger Vogt
 * dctran.c, spiceif.c, options.c, fteext.h: option noinit added.
   This option suppresses the printout of "Initial Transient Solution".
   noinit may be combined with acct. noacct will suppress both printouts.
 * spsmp.c, ngspice.h: reference to _logb added for _MSC_VER  

2009-08-17 Holger Vogt
 * inp.c: some comments added
  
2009-08-15 Holger Vogt
 * cpitf.c: MS Windows: search for spinit also in local (ngspice.exe) directory
 * cpextern.h: function parameters added in declaration
 * com_alias.h, init.c, cpitf.c, main.c: comments added

2009-08-08 Paolo Nenzi